--- a/the-drinking-game/src/MainGame/main-game.css
+++ b/the-drinking-game/src/MainGame/main-game.css
@@ -4,6 +4,7 @@
     background-color: #ffffff91;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 10px;
+    box-sizing: border-box;
 }
 
 .round-table-row {
