--- a/the-drinking-game/src/main-page.css
+++ b/the-drinking-game/src/main-page.css
@@ -16,7 +16,7 @@
 .main-page-button,
 .main-page-disabled-button {
     width: 175px;
-    height: 30px;
+    height: 44px;
     font-size: 1.4rem;
     border: none;
     border-radius: 12px;
